--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-#quiz {
+.quiz-container {
   position: relative;
   height: 200px;
   margin-top: 40px;
 };
 
-.slide{
+.slide {
     position: absolute;
     left: 0px;
     top: 0px;
@@ -12,9 +12,9 @@
     z-index: 1;
     opacity: 0;
     transition: opacity 0.5s;
-  };
+};
 
-  .active-slide{
+.active-slide {
     opacity: 1;
     z-index: 2;
-  };
+};
