--- a/style.css
+++ b/style.css
@@ -78,5 +78,11 @@ button:hover{
 
 .button-options{
     text-align: center;
+    position: relative;
+    top: 40px;
+}
+
+#leaderboard {
+    display: none;
 }
 
