--- a/leaderboard.css
+++ b/leaderboard.css
@@ -18,16 +18,17 @@
     margin: 5px;
     cursor: pointer;
     font-size: 100%;
-    background-color: #563d7c;
+    background-color: rgb(20, 111, 247);
     border-radius: 5px;
     padding: 2px 10px;
-    color: white;
+    color: black;
     border: 0;
     transition: background-color 0.1s;
   }
   
   button:hover {
-    background-color: #8570a5;
+    background-color: rgb(26, 26, 189);
+    color: white;
   }
   
   input[type="text"] {
@@ -45,9 +46,9 @@
     list-style: decimal inside none;
   }
   
-  li:nth-child(odd) {
+  /* li:nth-child(odd) {
     background-color: #f3edfc;
-  }
+  } */
   
   #leaderboard{
     margin: 100px auto 0 auto;
